# hw-toolkit

./: pyproject.toml
src/hw_toolkit/docking/: __init__.py  analysis.py  box_calculator.py  my_ligand_preparation.py  my_receptor_preparation.py
src/hw_toolkit/easy/: __init__.py  docking.py  easy_blastp.py  easy_pdb.py  easy_rdkit.py  scrapping_pdbbind_web.py
src/hw_toolkit/unspecified/: 1bcu_protein.pdb_predictions.csv  __init__.py  p2rank.py
