[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw_toolkit"
version = "0.1.0"
authors = [
    {name = "Hawon Lee", email = "vmfhrm3@gmail.com"}
]
description = "simple toolkits for structure-based drug discovery"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "rdkit",
    "inquirer",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/Hawon-Lee/hw-toolkit"